<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        tools:context=".controllers.MainActivity">


        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_loan"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close_Settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="#CD1405"
            android:contentDescription="@string/description_button_close"
            android:src="@drawable/ic_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/credit"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/amount_of_the_loan_dollars"
                app:boxBackgroundColor="@color/colorWhite"
                app:endIconMode="clear_text"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:labelFor="@+id/credit"
                    android:textSize="@dimen/text_size" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/years"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/number_of_years"
                android:drawablePadding="16dp"
                app:drawableStartCompat="@drawable/ic_time_24" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Slider pour les années de prêt"
                android:stepSize="5.0"
                android:valueFrom="0.0"
                android:valueTo="25.0" />

            <TextView
                android:id="@+id/txtInterestRate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/taeg_fixe"
                android:drawablePadding="16dp"
                app:drawableStartCompat="@drawable/ic_currency_exchange_24" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_txtInterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Slider pour le taux du prêt"
                android:stepSize="1.0"
                android:valueFrom="0.0"
                android:valueTo="8.0" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fields"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refund"

                />
            <TextView
                android:id="@+id/monthly_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btnCalcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomButtonStyle"
            android:layout_marginTop="16dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearResult" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>